--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: required
 install: test -e .travis-opam.sh || wget https://raw.githubusercontent.com/ocaml/ocaml-ci-scripts/master/.travis-opam.sh
 script: bash -ex .travis-opam.sh
 env:
-  - OCAML_VERSION=4.02
+  - DEPOPTS="ounit"
   - OCAML_VERSION=4.03
   - OCAML_VERSION=4.04
   - OCAML_VERSION=4.05
@@ -11,9 +11,5 @@ env:
   - OCAML_VERSION=4.07
   - OCAML_VERSION=4.08
   - OCAML_VERSION=4.09
-  - OCAML_VERSION=4.10.0+beta1 OCAML_BETA=enable
   - OCAML_VERSION=4.10
-os:
-  - freebsd
-  - linux
-  - osx
+  - OCAML_VERSION=4.10.0+beta1 OCAML_BETA=enable
