--- a/mlpystring.opam
+++ b/mlpystring.opam
@@ -16,8 +16,16 @@ depends: [
 ]
 build: [
   ["dune" "subst"] {pinned}
-  ["dune" "build" "-p" name "-j" jobs "@install"]
-  ["dune" "build" "-p" name "-j" jobs "@runtest"] {with-test}
-  ["dune" "build" "-p" name "-j" jobs "@doc" ] {with-doc}
+  [
+    "dune"
+    "build"
+    "-p"
+    name
+    "-j"
+    jobs
+    "@install"
+    "@runtest" {with-test}
+    "@doc" {with-doc}
+  ]
 ]
 dev-repo: "git+https://github.com/ChanTsune/mlpystring.git"
