--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,12 @@ sudo: required
 install: test -e .travis-opam.sh || wget https://raw.githubusercontent.com/ocaml/ocaml-ci-scripts/master/.travis-opam.sh
 script: bash -ex .travis-opam.sh
 env:
-  - OCAML_VERSION=4.03 DEPOPTS="ounit"
-  - OCAML_VERSION=4.04 DEPOPTS="ounit"
-  - OCAML_VERSION=4.05 DEPOPTS="ounit"
-  - OCAML_VERSION=4.06 DEPOPTS="ounit"
-  - OCAML_VERSION=4.07 DEPOPTS="ounit"
-  - OCAML_VERSION=4.08 DEPOPTS="ounit"
-  - OCAML_VERSION=4.09 DEPOPTS="ounit"
-  - OCAML_VERSION=4.10 DEPOPTS="ounit"
-  - OCAML_VERSION=4.10.0+beta1 OCAML_BETA=enable DEPOPTS="ounit"
+  - OCAML_VERSION=4.03 DEPOPTS="ocamlfind ounit"
+  # - OCAML_VERSION=4.04 DEPOPTS="ocamlfind ounit"
+  # - OCAML_VERSION=4.05 DEPOPTS="ocamlfind ounit"
+  # - OCAML_VERSION=4.06 DEPOPTS="ocamlfind ounit"
+  # - OCAML_VERSION=4.07 DEPOPTS="ocamlfind ounit"
+  # - OCAML_VERSION=4.08 DEPOPTS="ocamlfind ounit"
+  # - OCAML_VERSION=4.09 DEPOPTS="ocamlfind ounit"
+  # - OCAML_VERSION=4.10 DEPOPTS="ocamlfind ounit"
+  # - OCAML_VERSION=4.10.0+beta1 OCAML_BETA=enable DEPOPTS="ocamlfind ounit"
