--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: c
 sudo: required
 install: test -e .travis-opam.sh || wget https://raw.githubusercontent.com/ocaml/ocaml-ci-scripts/master/.travis-opam.sh
-script: bash -ex .travis-opam.sh
+script:
+  - "bash -ex .travis-opam.sh"
+  - "dune runtest"
+
 env:
-  - OCAML_VERSION=4.03 DEPOPTS="ocamlfind ounit"
+  - OCAML_VERSION=4.03 DEPOPTS="ocamlfind ounit" TESTS="false"
   # - OCAML_VERSION=4.04 DEPOPTS="ocamlfind ounit"
   # - OCAML_VERSION=4.05 DEPOPTS="ocamlfind ounit"
   # - OCAML_VERSION=4.06 DEPOPTS="ocamlfind ounit"
