--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ install: test -e .travis-opam.sh || wget https://raw.githubusercontent.com/ocaml
 script: bash -ex .travis-opam.sh
 
 env:
-  - OCAML_VERSION=4.03 POST_INSTALL_HOOK="opam install ounit && opam show ounit --list-files && dune installed-libraries && ocamlfind list"
+  - OCAML_VERSION=4.03 TESTS="false" POST_INSTALL_HOOK="opam install ounit && opam show ounit --list-files && dune installed-libraries && ocamlfind list"
   # - OCAML_VERSION=4.04 DEPOPTS="ocamlfind ounit"
   # - OCAML_VERSION=4.05 DEPOPTS="ocamlfind ounit"
   # - OCAML_VERSION=4.06 DEPOPTS="ocamlfind ounit"
