--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ script: bash -ex .travis-opam.sh
 
 env:
   - OCAML_VERSION=4.03 TESTS="false" POST_INSTALL_HOOK="opam install ounit && opam show ounit --list-files && dune installed-libraries && ocamlfind printconf path && opam config var lib && echo $PATH && dune printenv && dune runtest --debug-dependency-path"
-  # - OCAML_VERSION=4.04 DEPOPTS="ocamlfind ounit"
+  - OCAML_VERSION=4.03 POST_INSTALL_HOOK="opam install ounit && opam show ounit --list-files && dune installed-libraries && ocamlfind printconf path && opam config var lib && echo $PATH && dune printenv && dune runtest --debug-dependency-path"
   # - OCAML_VERSION=4.05 DEPOPTS="ocamlfind ounit"
   # - OCAML_VERSION=4.06 DEPOPTS="ocamlfind ounit"
   # - OCAML_VERSION=4.07 DEPOPTS="ocamlfind ounit"
