--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,12 @@ install: test -e .travis-opam.sh || wget https://raw.githubusercontent.com/ocaml
 script: bash -ex .travis-opam.sh
 
 env:
-  - OCAML_VERSION=4.03 TESTS="false" POST_INSTALL_HOOK="opam install ounit && opam show ounit --list-files && dune installed-libraries && ocamlfind printconf path && opam config var lib && echo $PATH && dune printenv && dune runtest --debug-dependency-path"
+  - OCAML_VERSION=4.03
   - OCAML_VERSION=4.04
-  # - OCAML_VERSION=4.05 DEPOPTS="ocamlfind ounit"
-  # - OCAML_VERSION=4.06 DEPOPTS="ocamlfind ounit"
-  # - OCAML_VERSION=4.07 DEPOPTS="ocamlfind ounit"
-  # - OCAML_VERSION=4.08 DEPOPTS="ocamlfind ounit"
-  # - OCAML_VERSION=4.09 DEPOPTS="ocamlfind ounit"
-  # - OCAML_VERSION=4.10 DEPOPTS="ocamlfind ounit"
-  # - OCAML_VERSION=4.10.0+beta1 OCAML_BETA=enable DEPOPTS="ocamlfind ounit"
+  - OCAML_VERSION=4.05
+  - OCAML_VERSION=4.06
+  - OCAML_VERSION=4.07
+  - OCAML_VERSION=4.08
+  - OCAML_VERSION=4.09
+  - OCAML_VERSION=4.10
+  - OCAML_VERSION=4.10.0+beta1 OCAML_BETA=enable
