--- a/mlpystring.opam
+++ b/mlpystring.opam
@@ -12,7 +12,7 @@ bug-reports: "https://github.com/ChanTsune/mlpystring/issues"
 depends: [
   "ocaml" {>= "4.03"}
   "dune" {> "2.5"}
-  "ounit" {> "2.2"}
+  "ounit2" {with-test}
 ]
 build: [
   ["dune" "subst"] {pinned}
